--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.3</version>
         <configuration>
